# Python-RockManX8

./: .flake8  .gitignore  .gitmodules  LICENSE  MCB_Directory_List.txt  MCB_Intermission.txt  NOCD.CT  README.md  README.txt  SAVE4  SAVE5  build.bat  compile_kaitai.ps1  compile_ui.bat  ctrees.txt  dialog_editor.py  dialog_editor.ui  editor_v2.py  editor_v2.ui  format.ps1  gui.py  log.txt  main.spec  mcb_editor.py  mcb_editor.ui  mmx8.txt  noesis_link.ps1  open_mcb.py  pyproject.toml  tga.py  ui_design_editor.py  ui_editor_window.py  ui_main.py  update_ui.bat  workspace.code-workspace  x8_repl_assets.py  x8_utils.py
Noesis-Plugins-master/: fmt_mtframework_3ds_tex.py
dll/OverlayDLL/: OverlayDLL.sln
ghidra/RockManX8.rep/: project.prp  projectState
kaitai/: experiment.py  set.ksy  set_file.py
mugshots/: mugshots.npz  mugshots.py
notes/: CENTRAL_WHITE_CAMERA.CT  HUNTER_MODE.CT  LEGACY.CT  MCB_Notes.txt  NOCD.CT  NOCD_LEV.CT  ONLINE1.CT  ONLINE2.CT  OOP.CT  RXC2_Set_Experiments.CT  call_unload1.CEA  extract.bat  extract_arc.py  forest_cam.txt  load1.CEA  mmx8.txt  new_set.txt  notab.CEA  notes.txt  retab.CEA  troia_cam.txt  update.bat  update_arc.py
reclass/: classes.rcnet  legacy_classes.rcnet
resources/: font.wpg  mugshots.pkl
src/: fbs_utils.py  main.py  main_set_editor.py  main_texture_editor.py  oop.ipynb  oop.py  oop_cmd.py  sandbox.ipynb  test.py
src/app/: app_manager.py  config.py  exception_manager.py  mcb_manager.py  resource_manager.py
src/core/: constants.py  file_stream.py  io_util.py  mcb.py  set.py  wpg.py  x8_utils.py
src_D3D11_DLL/: D3D11Wrapper.sln  README.md
src_D3D9_DLL/: DirectXHook.vcxproj  d3d9.cpp  hooks.cpp  main.cpp  set.cpp
src_DLLInjector/: OverlayDLL.sln  OverlayDLL.vcxproj  OverlayDLL.vcxproj.filters  dllmain.cpp  oldmain.cpp  set.h  stdafx.h
src_DLLInjector2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  editor.cpp
src_DirectXHook/: DirectXHook.sln  DirectXHook.vcxproj  DirectXHook.vcxproj.filters  README.md  Source.def  hooks.cpp  hooks.h  main.cpp  myIDirect3D8.cpp  myIDirect3D8.h  myIDirect3DDevice8.cpp  myIDirect3DDevice8.h  packages.config  stdafx.h  w_d3d9.h
src_GUI/: src_GUI.sln
(+113 files in other folders)
