[tool.poetry]
name = "megaman-x8-tools"
version = "0.1.0"
description = ""
authors = ["DeveloperJose <josegperez@mail.com>"]
readme = "README.md"
packages = [ { include = "megaman-x8-tools", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
